--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-streamlit==1.33.0
-pandas==2.1.4
-pillow==10.2.0
-reportlab==4.1.0
-fpdf==1.7.2
-cryptography==42.0.1
-python-dateutil==2.8.2
-sqlalchemy==2.0.23
-pymysql==1.1.0
-streamlit-geolocation==0.1.0
+streamlit>=1.33.0
+pandas>=2.1.4
+pillow>=10.2.0
+reportlab>=4.1.0
+fpdf>=1.7.2
+cryptography>=42.0.1
+python-dateutil>=2.8.2
+sqlalchemy>=2.0.23
+pymysql>=1.1.0
+streamlit-geolocation>=0.1.0
