--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,4 @@ cryptography>=42.0.1
 python-dateutil>=2.8.2
 sqlalchemy>=2.0.23
 pymysql>=1.1.0
-streamlit-geolocation>=0.1.0
+streamlit-geolocation==0.0.10
