--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,6 @@ python-dateutil>=2.8.2
 sqlalchemy>=2.0.23
 pymysql>=1.1.0
 streamlit-geolocation==0.0.10
+folium>=0.14.0
+streamlit-folium>=0.12.0
+geopy>=2.3.0
